guacamole-rdp-vnc-gateway-existing-vnet/azuredeploy.bicep
param existingVNETLocation string {
  allowed: [
    'East Asia'
    'Southeast Asia'
    'Central US'
    'East US'
    'East US 2'
    'West US'
    'North Central US'
    'South Central US'
    'North Europe'
    'West Europe'
    'Japan West'
    'Japan East'
    'Brazil South'
    'Australia East'
    'Australia Southeast'
    'South India'
    'Central India'
    'West India'
    'Canada Central'
    'Canada East'
    'UK South'
    'UK West'
    'West Central US'
    'West US 2'
    'Korea Central'
    'Korea South'
  ]
  metadata: {
    description: 'Location of the existing VNet (in which to deploy this VM)'
  }
}
param vmName string {
  metadata: {
    description: 'Name for the Guacamole VM'
  }
  default: 'GuacamoleVM'
}
param vmSize string {
  metadata: {
    description: 'Instance size for the Guacamole VM'
  }
  default: 'Standard_A2_v2'
}
param adminUsername string {
  metadata: {
    description: 'Username to login to the VMs'
  }
}
param sshKeyData string {
  metadata: {
    description: 'Public key for SSH authentication'
  }
}
param existingVirtualNetworkName string {
  metadata: {
    description: 'Name of the existing VNet'
  }
}
param existingVirtualNetworkResourceGroup string {
  metadata: {
    description: 'Name of the Resource Group containing the existing VNet'
  }
}
param existingSubnetName string {
  metadata: {
    description: 'Name of the subnet in the VNet you want to use'
  }
}

var subnetRef = resourceId('Microsoft.Network/virtualNetworks/subnets', existingVirtualNetworkName, existingSubnetName)
var osImageSku = 'Stable'
var securityGroupName = '${vmName}-NSG'
var nicName = '${vmName}-NIC'
var publicIpAddressName = '${vmName}-IP'
var sshKeyPath = '/home/${adminUsername}/.ssh/authorized_keys'
var cloudConfig = 'I2Nsb3VkLWNvbmZpZw0KY29yZW9zOg0KICB1cGRhdGU6DQogICAgcmVib290LXN0cmF0ZWd5OiBiZXN0LWVmZm9ydA0KICB1bml0czoNCiAgICAtIG5hbWU6IGRvY2tlci5zZXJ2aWNlDQogICAgICBjb21tYW5kOiBzdGFydA0KICAgIC0gbmFtZTogZG9ja2VyLWd1YWNhbW9sZS5zZXJ2aWNlDQogICAgICBjb21tYW5kOiBzdGFydA0KICAgICAgY29udGVudDogfA0KICAgICAgICBbVW5pdF0NCiAgICAgICAgRGVzY3JpcHRpb249R3VhY2Ftb2xlIHJ1bm5pbmcgb24gRG9ja2VyDQogICAgICAgIA0KICAgICAgICBSZXF1aXJlcz1kb2NrZXIuc2VydmljZSBkb2NrZXItZ3VhY2Quc2VydmljZSBkb2NrZXItbWFyaWFkYi5zZXJ2aWNlIGRvY [...]

resource publicIpAddressName_resource 'Microsoft.Network/publicIPAddresses@2015-06-15' = {
  name: publicIpAddressName
  location: existingVNETLocation
  properties: {
    publicIPAllocationMethod: 'Dynamic'
  }
}

resource securityGroupName_resource 'Microsoft.Network/networkSecurityGroups@2015-06-15' = {
  name: securityGroupName
  location: existingVNETLocation
  properties: {
    securityRules: [
      {
        name: 'SSH'
        properties: {
          description: 'Allows SSH traffic'
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRange: '22'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
        }
      }
      {
        name: 'HTTP'
        properties: {
          description: 'Allows HTTP traffic'
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRange: '80'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 200
          direction: 'Inbound'
        }
      }
    ]
  }
}

resource nicName_resource 'Microsoft.Network/networkInterfaces@2015-06-15' = {
  name: nicName
  location: existingVNETLocation
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfig1'
        properties: {
          privateIPAllocationMethod: 'Dynamic'
          publicIPAddress: {
            id: publicIpAddressName_resource.id
          }
          subnet: {
            id: subnetRef
          }
        }
      }
    ]
    networkSecurityGroup: {
      id: securityGroupName_resource.id
    }
  }
  dependsOn: [
    publicIpAddressName_resource
    securityGroupName_resource
  ]
}

resource vmName_resource 'Microsoft.Compute/virtualMachines@2016-04-30-preview' = {
  name: vmName
  location: existingVNETLocation
  properties: {
    hardwareProfile: {
      vmSize: vmSize
    }
    osProfile: {
      computerName: vmName
      adminUsername: adminUsername
      customData: cloudConfig
      linuxConfiguration: {
        disablePasswordAuthentication: true
        ssh: {
          publicKeys: [
            {
              path: sshKeyPath
              keyData: sshKeyData
            }
          ]
        }
      }
    }
    storageProfile: {
      imageReference: {
        publisher: 'CoreOS'
        offer: 'CoreOS'
        sku: osImageSku
        version: 'latest'
      }
      osDisk: {
        caching: 'ReadWrite'
        createOption: 'FromImage'
      }
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: nicName_resource.id
        }
      ]
    }
  }
  dependsOn: [
    nicName_resource
  ]
}
